<resources>
    <string name="app_name">ProjectIMC</string>
    <string name="name">Nome: </string>
    <string name="age">Idade: </string>
    <string name="weight">Peso (kg): </string>
    <string name="height">Altura (m): </string>
    <string name="report">Relatório Nutricional</string>
    <string name="imc">IMC: </string>
    <string name="classification">Classificação: </string>
    <string name="newCalc">Realizar novo Cálculo</string>
</resources>