<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/name"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="20dp"


        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:id="@+id/editName"
        android:layout_alignLeft="@+id/name"
        android:layout_marginTop="10dp"
        android:ems="17"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/editName"
        android:id="@+id/age"
        android:layout_marginTop="30dp"
        android:text="@string/age"

        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age"
        android:id="@+id/editAge"
        android:layout_alignLeft="@+id/name"
        android:layout_marginTop="10dp"
        android:ems="2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/editName"
        android:id="@+id/weight"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="140dp"
        android:text="@string/weight"

        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age"
        android:id="@+id/editWeight"
        android:layout_alignLeft="@+id/weight"
        android:layout_marginTop="10dp"
        android:ems="3"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/weight"
        android:layout_below="@+id/editName"
        android:id="@+id/height"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="140dp"
        android:text="@string/height"

        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/height"
        android:id="@+id/editHeight"
        android:layout_alignLeft="@+id/height"
        android:layout_marginTop="10dp"
        android:ems="3"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editWeight"
        android:layout_alignLeft="@+id/editWeight"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="-58dp"
        android:text="@string/report"
        android:id="@+id/report"
        android:onClick="getData"
        />


</RelativeLayout>